fix(mbti): add overflow hidden

--- a/mbti/style.css
+++ b/mbti/style.css
@@ -8,6 +8,7 @@
 }
 
 .container {
+  overflow: hidden;
   width: 100%;
   max-width: 480px;
   margin: 0 auto;
